# balaklava-engine

./: Cargo.toml
example/application/: dimensions.rs  fullscreen.rs  main.rs
example/graphics/: sprite.rs  square.rs
example/graphics/shader/: shader_150.glslf  shader_150.glslv
src/: camera.rs  core.rs  events.rs  g2d.rs  geometry.rs  graphics.rs  lib.rs  main.rs  mesh.rs
src/backend/: gfx.rs  mod.rs
src/backend/gfx/: instance.rs  mod.rs  pipeline.rs  pool.rs
src/g2d/: Cargo.toml  mod.rs
src/g2d/src/: lib.rs
src/g2d/src/sharder/: shader_150.glslf
src/gfx/: Cargo.toml
src/gfx/src/: lib.rs  pipeline.rs
src/gl/: Cargo.toml  mod.rs
src/gl/src/: lib.rs
src/gpu/: Cargo.toml  mod.rs
src/gpu/src/: lib.rs
src/gpu_gfx/: config.rs  mod.rs
src/loaders/: mod.rs  test.rs
src/math/: Cargo.toml
src/math/src/: lib.rs
src/shader/: shader_150.glslf  shader_150.glslv
