[package]
name = "learn-gfx"
version = "0.1.0"
authors = ["Bernardo de Oliveira Bruning <bernardo.bruning@resultadosdigitais.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
glutin = "0.12.0"
gfx = "0.17"
gfx_window_glutin = "0.20"
gfx_device_gl = "0.15.5"
nalgebra = "0.18.0"
image  = "0.23.0"
tobj = "0.1.12"