[package]
name = "learn-gfx"
version = "0.1.0"
authors = ["Bernardo de Oliveira Bruning <bernardo.bruning@resultadosdigitais.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tobj/log"]

[lib]
name = "balaklava"

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
glutin = "0.12.0"
gfx = "0.17"
gfx_window_glutin = "0.20"
gfx_device_gl = "0.15.5"
nalgebra = "0.20.0"
image  = "0.23.0"
tobj = "0.1.12"
nalgebra-glm = "0.6"


[[example]]
name = "application_dimensions"
path = "example/application/dimensions.rs"

[[example]]
name = "application_fullscreen"
path = "example/application/fullscreen.rs"