[package]
name = "balaklava_g2d"
version = "0.1.0"
authors = ["Bernardo de Oliveira Bruning <bernardo.bruning@resultadosdigitais.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "balaklava_g2d"

[dependencies]
balaklava_gpu = {path="../../src/gpu", version="0.1" }
