[package]
name = "balaklava_gfx"
version = "0.1.0"
authors = ["Bernardo de Oliveira Bruning <bernardo.bruning@resultadosdigitais.com.br>"]
edition = "2018"

[lib]
name = "balaklava_gfx"

[dependencies]
balaklava_gpu = {path="../../src/gpu", version="0.1"}
balaklava_math = {path="../../src/math", version="0.1"}
glutin = "0.12.0"
gfx = "0.17"
gfx_window_glutin = "0.20"
gfx_device_gl = "0.15.5"

