[package]
name = "balaklava_gl"
version = "0.1.0"
authors = ["Bernardo de Oliveira Bruning <bernardo.bruning@resultadosdigitais.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "balaklava_gl"

[dependencies]
image = "*"
glium = "0.27.0"
balaklava_gpu = {path="../../src/gpu", version="0.1" }