[package]
name = "balaklava_gpu"
version = "0.1.0"
authors = ["Bernardo de Oliveira Bruning <bernardo.bruning@resultadosdigitais.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "balaklava_gpu"

[dependencies]
image = "*"
balaklava_math = {path = "../math", version="0.1"}
